--- a/feature-staking-impl/src/main/res/layout/item_select_staked_collator.xml
+++ b/feature-staking-impl/src/main/res/layout/item_select_staked_collator.xml
@@ -3,26 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center_vertical"
     android:background="@drawable/bg_primary_list_item"
-    android:orientation="horizontal"
-    tools:background="@color/black">
+    tools:orientation="horizontal">
 
-    <io.novafoundation.nova.feature_account_api.view.AddressView
-        android:id="@+id/itemAccountChooserAddress"
+    <include
+        android:id="@+id/itemSelectStakedCollatorCollator"
+        layout="@layout/item_validator"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:showBackground="false"
         android:layout_weight="1" />
 
     <RadioButton
-        android:layout_gravity="center_vertical"
-        android:layout_marginEnd="16dp"
-        android:id="@+id/itemAccountChooserCheck"
+        android:id="@+id/itemSelectStakedCollatorCheck"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:buttonTint="@color/tint_radio_button"
         android:clickable="false"
         android:duplicateParentState="true"
-        android:buttonTint="@color/tint_radio_button"
-        android:layout_height="wrap_content" />
-
+        tools:checked="true" />
 </LinearLayout>
