--- a/feature-staking-impl/src/main/res/layout/fragment_parachain_staking_unbond.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_parachain_staking_unbond.xml
@@ -80,6 +80,9 @@
 
             <io.novafoundation.nova.common.mixin.hints.HintsView
                 android:layout_width="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
                 android:id="@+id/parachainStakingUnbondHints"
                 android:layout_height="wrap_content" />
         </LinearLayout>
