--- a/app/src/main/res/navigation/staking_parachain_unbond.xml
+++ b/app/src/main/res/navigation/staking_parachain_unbond.xml
@@ -4,9 +4,22 @@
     android:id="@+id/staking_parachain_unbond"
     app:startDestination="@id/parachainStakingUnbondFragment">
 
-
     <fragment
         android:id="@+id/parachainStakingUnbondFragment"
         android:name="io.novafoundation.nova.feature_staking_impl.presentation.parachainStaking.unbond.setup.ParachainStakingUnbondFragment"
-        android:label="ParachainStakingUnbondFragment" />
+        android:label="ParachainStakingUnbondFragment">
+
+        <action
+            android:id="@+id/action_parachainStakingUnbondFragment_to_parachainStakingUnbondConfirmFragment"
+            app:destination="@id/parachainStakingUnbondConfirmFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/parachainStakingUnbondConfirmFragment"
+        android:name="io.novafoundation.nova.feature_staking_impl.presentation.parachainStaking.unbond.confirm.ParachainStakingUnbondConfirmFragment"
+        android:label="ParachainStakingUnbondConfirmFragment" />
 </navigation>
