--- a/feature-wallet-api/src/main/res/layout/view_primary_amount.xml
+++ b/feature-wallet-api/src/main/res/layout/view_primary_amount.xml
@@ -8,6 +8,13 @@
     tools:orientation="vertical"
     tools:parentTag="android.widget.LinearLayout">
 
+    <ProgressBar
+        android:id="@+id/primaryAmountProgress"
+        tools:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/white" />
+
     <TextView
         android:id="@+id/primaryAmountToken"
         style="@style/TextAppearance.NovaFoundation.Bold.LargeTitle"
