Base confirm return to stake screen

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -282,6 +282,14 @@
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
+            android:id="@+id/action_mainFragment_to_parachainStakingRebondFragment"
+            app:destination="@id/parachainStakingRebondFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
     </fragment>
 
 
@@ -938,5 +946,10 @@
         android:id="@+id/parachainStakingRedeemFragment"
         android:name="io.novafoundation.nova.feature_staking_impl.presentation.parachainStaking.redeem.ParachainStakingRedeemFragment"
         android:label="ParachainStakingRedeemFragment" />
+
+    <fragment
+        android:id="@+id/parachainStakingRebondFragment"
+        android:name="io.novafoundation.nova.feature_staking_impl.presentation.parachainStaking.rebond.ParachainStakingRebondFragment"
+        android:label="ParachainStakingRebondFragment" />
 
 </navigation>
