--- a/feature-staking-impl/src/main/res/layout/view_alerts.xml
+++ b/feature-staking-impl/src/main/res/layout/view_alerts.xml
@@ -55,6 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:overScrollMode="never"
         android:layout_marginBottom="8dp"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
