--- a/feature-staking-impl/src/main/res/layout/fragment_select_custom_validators.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_select_custom_validators.xml
@@ -101,6 +101,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        android:paddingBottom="80dp"
+        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
