--- a/feature-account-api/src/main/res/layout/view_chain_chip.xml
+++ b/feature-account-api/src/main/res/layout/view_chain_chip.xml
@@ -14,6 +14,7 @@
         android:includeFontPadding="false"
         android:paddingStart="32dp"
         android:paddingTop="4.5dp"
+        android:gravity="center_vertical"
         android:paddingEnd="8dp"
         android:singleLine="true"
         android:paddingBottom="4.5dp"
