--- a/feature-assets/src/main/res/layout/fragment_confirm_send.xml
+++ b/feature-assets/src/main/res/layout/fragment_confirm_send.xml
@@ -15,75 +15,98 @@
         app:dividerVisible="false"
         app:titleText="@string/wallet_asset_send" />
 
-    <io.novafoundation.nova.feature_wallet_api.presentation.view.amount.PrimaryAmountView
-        android:id="@+id/confirmSendAmount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp" />
-
-    <io.novafoundation.nova.common.view.TableView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp">
-
-        <io.novafoundation.nova.common.view.TableCellView
-            android:id="@+id/confirmSendNetwork"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:title="@string/common_network" />
-
-        <io.novafoundation.nova.common.view.TableCellView
-            android:id="@+id/confirmSendWallet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:title="@string/tabbar_wallet_title" />
-
-        <io.novafoundation.nova.common.view.TableCellView
-            android:id="@+id/confirmSendSender"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:primaryValueIcon="@drawable/ic_info_16"
-            app:primaryValueIconTint="@color/white_64"
-            app:title="@string/wallet_sender" />
-
-        <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
-            android:id="@+id/confirmSendFee"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </io.novafoundation.nova.common.view.TableView>
-
-    <io.novafoundation.nova.common.view.TableView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp">
-
-        <io.novafoundation.nova.common.view.TableCellView
-            android:id="@+id/confirmSendRecipient"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:primaryValueIcon="@drawable/ic_info_16"
-            app:primaryValueIconTint="@color/white_64"
-            app:title="@string/wallet_recipient" />
-
-    </io.novafoundation.nova.common.view.TableView>
-
-    <Space
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
+
+            <io.novafoundation.nova.feature_wallet_api.presentation.view.amount.PrimaryAmountView
+                android:id="@+id/confirmSendAmount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp" />
+
+            <io.novafoundation.nova.common.view.TableView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp">
+
+                <io.novafoundation.nova.common.view.TableCellView
+                    android:id="@+id/confirmSendFromNetwork"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:title="@string/common_network" />
+
+                <io.novafoundation.nova.common.view.TableCellView
+                    android:id="@+id/confirmSendWallet"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:title="@string/tabbar_wallet_title" />
+
+                <io.novafoundation.nova.common.view.TableCellView
+                    android:id="@+id/confirmSendSender"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:primaryValueIcon="@drawable/ic_info_16"
+                    app:primaryValueIconTint="@color/white_64"
+                    app:title="@string/wallet_sender" />
+
+                <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
+                    android:id="@+id/confirmSendOriginFee"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
+                    android:id="@+id/confirmSendCrossChainFee"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </io.novafoundation.nova.common.view.TableView>
+
+            <io.novafoundation.nova.common.mixin.hints.HintsView
+                android:id="@+id/confirmSendHints"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp" />
+
+            <io.novafoundation.nova.common.view.TableView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp">
+
+                <io.novafoundation.nova.common.view.TableCellView
+                    android:id="@+id/confirmSendToNetwork"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    app:title="@string/wallet_send_to_network" />
+
+                <io.novafoundation.nova.common.view.TableCellView
+                    android:id="@+id/confirmSendRecipient"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:primaryValueIcon="@drawable/ic_info_16"
+                    app:primaryValueIconTint="@color/white_64"
+                    app:title="@string/wallet_recipient" />
+
+            </io.novafoundation.nova.common.view.TableView>
+
+        </LinearLayout>
+    </ScrollView>
 
     <io.novafoundation.nova.common.view.PrimaryButton
         android:id="@+id/confirmSendConfirm"
         style="@style/Widget.Nova.Button.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="24dp"
