Cross chain/UI (#318)
* Destination chain title

* Destination chain chooser

* Address input for cross chain

* Fee calculation

* Move "to" to the new line

* Confirm cross chain

* Code style

* Remove adjustment of xcm execute overhead

* Fixes

--- a/feature-account-api/src/main/res/layout/view_chain_chip.xml
+++ b/feature-account-api/src/main/res/layout/view_chain_chip.xml
@@ -9,11 +9,12 @@
         android:id="@+id/itemAssetGroupLabel"
         style="@style/TextAppearance.NovaFoundation.SemiBold.Caps1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="22dp"
         android:layout_gravity="center_vertical"
         android:includeFontPadding="false"
         android:paddingStart="32dp"
         android:paddingTop="4.5dp"
+        android:gravity="center_vertical"
         android:paddingEnd="8dp"
         android:singleLine="true"
         android:paddingBottom="4.5dp"
