--- a/feature-assets/src/main/res/layout/view_transfer_history.xml
+++ b/feature-assets/src/main/res/layout/view_transfer_history.xml
@@ -41,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/transactionHistoryTitle"
-        tools:listitem="@layout/item_transaction"
+        tools:listitem="@layout/item_operation_list_item"
         tools:visibility="visible" />
 
 
