--- a/feature-crowdloan-impl/src/main/res/layout/fragment_my_contributions.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_my_contributions.xml
@@ -13,6 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
+        app:dividerVisible="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:titleText="@string/crowdloan_your_contributions" />
@@ -26,7 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/myContributionsToolbar"
-        android:paddingTop="16dp"
+        android:paddingTop="8dp"
         android:paddingBottom="16dp"
         android:visibility="gone"
         tools:visibility="visible"
